[gd_scene load_steps=4 format=3 uid="uid://cpvchj4044w5"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_b0y8m"]
[ext_resource type="Texture2D" uid="uid://bvaf489x324k6" path="res://assets/jump_button.png" id="2_a82q0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0y61i"]
bg_color = Color(0.1, 0.1, 0.1, 0.392157)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_b0y8m")

[node name="JumpButton" type="TextureButton" parent="."]
offset_left = 980.0
offset_top = 500.0
offset_right = 1230.0
offset_bottom = 750.0
texture_normal = ExtResource("2_a82q0")
ignore_texture_size = true
stretch_mode = 0

[node name="MovementArea" type="Control" parent="."]
custom_minimum_size = Vector2(640, 720)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 640.0
grow_vertical = 2

[node name="MovementTouchBase" type="Panel" parent="MovementArea"]
modulate = Color(1, 1, 1, 0.294118)
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0y61i")

[node name="MovementTouchStick" type="Panel" parent="MovementArea"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0y61i")